
=== gedit 2.19.1 ===

2007-06-25  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.19.1 released

2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-language-manager.[ch]: rename 
	gedit-languages-manager to gedit-language-manager

2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* plugins/externaltools/tools/functions.py:
	* plugins/externaltools/tools/manager.py:
	* plugins/snippets/snippets/SnippetsDialog.py:
	* gedit/gedit-print.h:
	* gedit/gedit-source-style-manager.c:
	* gedit/dialogs/gedit-preferences-dialog.c:
	* gedit/gedit-source-style-manager.h:
	* gedit/gedit-file-chooser-dialog.c:
	* gedit/gtksourceprintjob.c:
	* gedit/gtksourceprintjob.h:
	* gedit/gedit-python-module.c:
	* gedit/gedit-window.c:
	* gedit/gedit-view.c:
	* gedit/gedit-document.c:
	* gedit/gedit-prefs-manager.c:
	* gedit/gedit-prefs-manager.h:
	* gedit/gedit-prefs-manager-app.c:
	* gedit/gedit-languages-manager.c:
	* gedit/gedit-languages-manager.h:
	* gedit/Makefile.am:
	* bindings/python/Makefile.am:
	* bindings/python/gedit.override:
	* configure.ac:

	First cut of gtksourceview 2 port: 
	- adapt to API Changes,
	- remove the Syntax Highlighting page from the preference
	  dialog (we still need to figure out what we want to do with
	  regard to style schemes)
	- prevent python plugins from importing the old gtksourceview
          bindings to avoid conflicting symbols
	- import a local copy of gtksourceprintjob, to have print 
	  working before a port to GtkPrint is done

=== gedit 2.18.2 ===

2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.18.2 released

2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* plugins/snippets/SnippetPluginInstance.py: remove 
	useless import gtksourceview.

	* plugins/spell/gedit-automatic-spell-checker.c: cleanup.

2007-06-24  Paolo Borelli  <pborelli@katamail.com>

	* Makefile.am: remove m4 from EXTRA_DIST. It's not needed.