@@ -416,7 +416,7 @@ _gedit_cmd_file_open (GtkAction   *action,
 		return;
 	}
 
-	open_dialog = gedit_file_chooser_dialog_new (_("Open Files\342\200\246"),
+	open_dialog = gedit_file_chooser_dialog_new (_("Open Files"),
 						     GTK_WINDOW (window),
 						     GTK_FILE_CHOOSER_ACTION_OPEN,
 						     NULL,
