@@ -1,3 +1,10 @@
+2007-06-25  Paolo Borelli  <pborelli@katamail.com>
+
+	* plugins/filebrowser/gedit-file-browser-plugin.c: fix a typo.
+	patch by Thierry Moisan.
+	* gedit/gedit-ui.h: capitalization and Mnemonic fix for
+	the incremental search menu item. Patch by Dennis Cranston.
+	* gedit/gedit-commands-file.c: remove '...' from dialog title
 
 === gedit 2.19.1 ===
 
